fix heading on mobile

--- a/client/styles.css
+++ b/client/styles.css
@@ -23,7 +23,7 @@ h1 {
 
 .container {
   width: 600px; 
-  margin: 0 auto;
+  margin: 35px auto 0 auto;
 }
 
 .title {
